[project]
name = "omnixys-observability"
dynamic = ["version"]
description = "Omnixys shared observability package (OTel tracing, structured logging, Prometheus metrics)"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.14"
dependencies = [
  "structlog>=26.1.0",
  "prometheus-client>=0.25.0",
  "opentelemetry-api>=1.42.1",
  "opentelemetry-sdk>=1.42.1",
  "opentelemetry-exporter-otlp-proto-http>=1.42.1",
  "opentelemetry-instrumentation>=0.63b1",
  "opentelemetry-instrumentation-fastapi>=0.63b1",
  "opentelemetry-instrumentation-sqlalchemy>=0.63b1",
  "opentelemetry-instrumentation-logging>=0.63b1",
  "opentelemetry-instrumentation-httpx>=0.63b1",
  "opentelemetry-instrumentation-asgi>=0.63b1",
]

authors = [
  {name = "Omnixys Team", email = "team@omnixys.com"},
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/omnixys_observability/__init__.py"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN101", "ANN401", "S101",
  "T20", "FBT", "D", "INP001",
]
"src/**" = [
  "S104", "D", "ANN401", "ARG002",
]

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "ruff>=0.15.21",
]
